--- a/ApiGeo.geodecodificador/ApiGeo.geodecodificador.csproj
+++ b/ApiGeo.geodecodificador/ApiGeo.geodecodificador.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Extension\Extension.csproj" />
+  </ItemGroup>
+
 
 </Project>
