--- a/apiGeo.geolocalizador/apiGeo.geolocalizador.csproj
+++ b/apiGeo.geolocalizador/apiGeo.geolocalizador.csproj
@@ -14,5 +14,9 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Extension\Extension.csproj" />
+  </ItemGroup>
+
 
 </Project>
